# biblioteka

./: README.md  biblioteka.java  czytelnicy.ser
projekt/: Biblioteka.java  Czytelnik.java  Menu.java  Wypozyczenie.java
src/: Biblioteka.java  Biblioteka_pl_PL.ts  CMakeLists.txt  Czytelnik.java  Ksiazka.java  Menu.java  Wypozyczenie.java  czytelnicy.ser  czytelnik.cpp  czytelnik.h  dialogczytelnik.cpp  dialogczytelnik.h  dialogczytelnik.ui  dialogksiazka.cpp  dialogksiazka.h  dialogksiazka.ui  dialogwypozyczenie.cpp  dialogwypozyczenie.h  dialogwypozyczenie.ui  ksiazka.cpp  ksiazka.h  ksiazki.ser  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapmodelCzytelnik.cpp  mapmodelCzytelnik.h  mapmodelKsiazka.cpp  mapmodelKsiazka.h  mapmodelWypozyczenie.cpp  mapmodelWypozyczenie.h  wypozyczenia.ser  wypozyczenie.cpp  wypozyczenie.h
src/.qt_for_python/uic/: dialogczytelnik.py  dialogksiazka.py  dialogwypozyczenie.py  mainwindow.py
